fixed list items

--- a/index.html
+++ b/index.html
@@ -29,15 +29,29 @@
     </div>
 
     <div class="slantedDivC">
-        <h1>BULLYING</h1>
+
         <div class="bullyingContainer">
-            <span class="orange">Workplace bullying</span>is defined as the repeated abuse of one or more persons by one or more perpetrators
+            <h1 class="cHead">BULLYING</h1>
+            <span class="orange">Workplace bullying</span> is defined as the repeated abuse of one or more persons by one or more perpetrators
             that:
-            <span class="orange">>> </span>Is done with malice
-            <span class="orange">>> </span>Is threatening, humiliating or intimidating
-            <span class="orange">>> </span>Is verbally or physically abusive
-            <span class="orange">>> </span>Interferes with the person’s ability to get his or her work done
-            <span class="orange">>> </span>Is unrelated to the Company’s legitimate business interests
+            <br>
+            <ul>
+                <li>
+                    Is done with malice
+                </li>
+                <li>
+                    Is threatening, humiliating or intimidating
+                </li>
+                <li>
+                    Is verbally or physically abusive
+                </li>
+                <li>
+                    Interferes with the person’s ability to get his or her work done
+                </li>
+                <li>
+                    Is unrelated to the Company’s legitimate business interests
+                </li>
+            </ul>
         </div>
     </div>
 </body>
