added first images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 <body>
     <div class="slantedDivA">
         <div class="aContainer">
-            <h1>Harrassment</h1>
+            <h1 class="aHead">Harrassment</h1>
+            
+                <img src="/img/harrassment-womanwithtextpod.png" class="harrassment-womanwithtextpod">
+                <img src="/img/harrassment-man.png" class="harrassment-man">
+                
+            </div>
         </div>
     </div>
 
