added remaining images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="slantedDivC">
-
+        <img src="img/bullying-bullies.png" alt="big meanies" class="bullyingBullies">
         <div class="bullyingContainer">
             <h1 class="cHead">BULLYING</h1>
             <span class="orange">Workplace bullying</span> is defined as the repeated abuse of one or more persons by one or more perpetrators
@@ -63,7 +63,9 @@
                 </li>
             </ul>
         </div>
+        <img src="img/bullying-victim.png" alt="bullying victim" class="bullyingVictim">
     </div>
+    <div class="pageBottom"></div>
     <script src="/js/main.js"></script>
 </body>
 
